--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.1",
     "vue": "^3.4.29",
+    "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.3.3"
   }
 }
