--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@vicons/ionicons5": "^0.12.0",
+    "axios": "^1.7.2",
+    "minio": "^8.0.1",
     "naive-ui": "^2.38.2",
     "nuxt": "^3.12.2",
     "nuxtjs-naive-ui": "^1.0.2",
