--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "solana-wallets-vue": "^0.6.1",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.1",
+    "uuid": "^10.0.0",
     "vue": "^3.4.29",
     "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.3.3"
